# RV32Isim

./: CMakeLists.txt  README.md
src/: logs.c  logs.h  sim.c  sim.h
